--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 
     <section>
       <h2>📫 Kontak</h2>
-      <p>📧 Email: <strong>[email protected]</strong><br>
+      <p>📧 Email: <strong>dutahilmyy@gmail.com</strong><br>
       🔗 LinkedIn: <strong>linkedin.com/in/dutahilmy</strong><br>
-      📍 Domisili: <strong>Indonesia</strong></p>
+      📍 Domisili: <strong>Bandung, Jawa Barat</strong></p>
     </section>
   </main>
 
